# hs3003-rs

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: docs.yml  release-plz.yml  verify-publish.yml
examples/esp32c3/: Cargo.toml
examples/esp32c3/.cargo/: config.toml
examples/esp32c3/src/: main.rs
examples/rp235x/: Cargo.toml
examples/rp235x/src/: main.rs
examples/rp235x_async/: Cargo.toml  rust-toolchain.toml
examples/rp235x_async/src/: main.rs
src/: lib.rs
