[package]
name = "hs3003"
version = "0.1.0"
authors = ["Mariusz Jurgielewicz <mordor@mail.com>"]
edition = "2021"
rust-version = "1.62"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the Renesas HS3003 temperature and humidity sensor"
repository = "https://github.com/melastmohican/hs3003-rs"
documentation = "https://docs.rs/hs3003"
readme = "README.md"
keywords = ["embedded", "no-std", "sensor", "i2c", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "thumbv6m-none-eabi",
    "thumbv8m.main-none-eabihf",
    "riscv32imc-unknown-none-elf",
]

[dependencies]
embedded-hal = "1.0"

[dev-dependencies]
embedded-hal-mock = "0.11"
