
[package]
name = "hs3003-esp32c3-app"
version = "0.1.0"
edition = "2021"

[dependencies]
hs3003 = { path = "../.." }
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c3", "unstable"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c3"] }
esp-alloc = "0.9.0"
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
defmt = "1.0.1"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

